update default branch name

--- a/.gitconfig
+++ b/.gitconfig
@@ -33,3 +33,5 @@
   plus-empty-line-marker-style  = syntax "#20303b"
   line-numbers-plus-style       = "#449dab"
   line-numbers-zero-style       = "#3b4261"
+[init]
+	defaultBranch = main
