--- a/.config/kitty/kitty.conf
+++ b/.config/kitty/kitty.conf
@@ -2718,3 +2718,5 @@ macos_titlebar_color #16161e
 # active_tab_background   #1f2335
 # inactive_tab_background #1f2335
 # macos_titlebar_color #1f2335
+
+cursor_trail 1
