--- a/.config/kitty/kitty.conf
+++ b/.config/kitty/kitty.conf
@@ -2692,3 +2692,6 @@ color17 #db4b4b
 
 cursor_trail 1
 cursor_trail_decay 0.1 0.4
+
+mouse_map left click ungrabbed mouse_handle_click selection link prompt
+mouse_map ctrl+left click ungrabbed mouse_handle_click link
