--- a/.config/kitty/kitty.conf
+++ b/.config/kitty/kitty.conf
@@ -2640,10 +2640,17 @@ font_size 18.0
 
 
 # BEGIN_KITTY_FONTS
-font_family      family='Fira Code' postscript_name=FiraCode-Regular
-bold_font        auto
-italic_font      auto
-bold_italic_font auto
+# Fira Code
+# font_family      family='Fira Code' postscript_name=FiraCode-Regular
+# bold_font        auto
+# italic_font      auto
+# bold_italic_font auto
+#
+# JetBrains Mono
+font_family      JetBrains Mono Regular
+bold_font        JetBrains Mono Bold
+italic_font      JetBrains Mono Italic
+bold_italic_font JetBrains Mono Bold Italic
 # END_KITTY_FONTS
 
 # Official Folke tokyonight theme
