--- a/.config/kitty/kitty.conf
+++ b/.config/kitty/kitty.conf
@@ -2654,7 +2654,7 @@ bold_italic_font JetBrains Mono Bold Italic
 # END_KITTY_FONTS
 
 # Official Folke tokyonight theme
-background #1a1b26
+background #15161e
 foreground #c0caf5
 selection_background #283457
 selection_foreground #c0caf5
@@ -2684,7 +2684,7 @@ color6 #7dcfff
 color7 #a9b1d6
 
 # bright
-color8  #414868
+color8  #0F111A
 color9  #ff899d
 color10 #9fe044
 color11 #faba4a
