--- a/.config/fastfetch/config.jsonc
+++ b/.config/fastfetch/config.jsonc
@@ -8,12 +8,15 @@
 {
   "$schema": "https://github.com/fastfetch-cli/fastfetch/raw/dev/doc/json_schema.json",
   "logo": {
-    "source": "~/.config/nvim/logo/fastfetch.txt",
-    // "type": "chafa",
-    //"height": 80,
+    "source": "/Users/momo/.config/nvim/assets/rosie.png",
+    "type": "chafa",
+    "height": 25,
+    "width": 50,
     "position": "left",
     "padding": {
       "top": 0,
+      "left": 7,
+      "right": 7,
     },
   },
   "display": {
