--- a/.config/fastfetch/config.jsonc
+++ b/.config/fastfetch/config.jsonc
@@ -9,7 +9,7 @@
   "$schema": "https://github.com/fastfetch-cli/fastfetch/raw/dev/doc/json_schema.json",
   "logo": {
     "source": "/Users/momo/.config/nvim/assets/rosie-3.png",
-    "type": "chafa",
+    "type": "sixel",
     "height": 25,
     "width": 50,
     "position": "left",
